# PlutarchMarket

./: PlutarchMarket.cabal  README.md  cabal.project
.github/workflows/: haskell.yml
app/: Main.hs
src/Market/: Contract.hs  PTypes.hs  Types.hs  Utils.hs
src/PExtra/: API.hs  Monadic.hs
test/: Eval.hs  Main.hs  Spec.hs  TestUtils.hs
