cabal-version:      2.4
name:               PlutarchMarket
version:            0.1.0.0
author:             RSerhii
maintainer:         rubetsserhii@gmail.com

common lang
  default-language:   GHC2021
  default-extensions:
    NoFlexibleInstances
    NoMonomorphismRestriction
    NoStarIsType
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NondecreasingIndentation
    NumDecimals
    OverloadedLabels
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnicodeSyntax
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Werror -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -Wno-unrecognised-pragmas -fprint-equality-relations
    -fprint-explicit-kinds -fprint-explicit-foralls

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Market.Contract
    Market.Utils
    Market.Types
    Market.PTypes
    Market.Helpers
    PExtra.API
    PExtra.Monadic

  build-depends:
    base
    , plutarch
    , plutarch-extra
    , plutus-tx
    , plutus-ledger-api

test-suite market-test
  import:           lang
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    Eval
    Spec
    TestUtils
  build-depends:    
    , base
    , base16
    , bytestring
    , tasty
    , tasty-hunit
    , tasty-hedgehog
    , hedgehog
    , PlutarchMarket  
    , plutus-core
    , plutus-ledger-api
    , plutus-tx 
    , plutarch
    , text
